--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -15,9 +15,9 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="260dp"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:background="@drawable/hanra6" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -25,19 +25,22 @@
 
         <Button
             android:id="@+id/button"
-            android:layout_width="wrap_content"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="80dp"
             android:layout_marginLeft="80dp"
             android:layout_marginTop="2dp"
-            android:text="지도"
-            android:textColor="@color/black" />
+            android:background="@drawable/my_btn"
+            android:text="#지도"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:backgroundTint="#EDE7F6" />
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="wrap_content"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/button"
             android:layout_alignParentLeft="true"
@@ -45,13 +48,14 @@
             android:layout_marginLeft="80dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/my_btn"
-            android:text="코스"
+            android:text="#코스"
             android:textColor="@color/black"
+            android:textSize="16sp"
             app:backgroundTint="#EDE7F6" />
 
         <Button
             android:id="@+id/button3"
-            android:layout_width="wrap_content"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/button2"
             android:layout_alignParentLeft="true"
@@ -59,13 +63,14 @@
             android:layout_marginLeft="80dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/my_btn"
-            android:text="기후정보"
+            android:text="#기후정보"
             android:textColor="@color/black"
+            android:textSize="16sp"
             app:backgroundTint="#EDE7F6" />
 
         <Button
             android:id="@+id/button4"
-            android:layout_width="wrap_content"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/button3"
             android:layout_alignParentLeft="true"
@@ -73,25 +78,27 @@
             android:layout_marginLeft="80dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/my_btn"
-            android:text="대피소"
+            android:text="#대피소"
             android:textColor="@color/black"
+            android:textSize="16sp"
             app:backgroundTint="#EDE7F6" />
 
         <Button
             android:id="@+id/button5"
-            android:layout_width="wrap_content"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginEnd="80dp"
             android:layout_marginRight="80dp"
             android:background="@drawable/my_btn"
-            android:text="구조요청"
+            android:text="#구조요청"
             android:textColor="@color/black"
+            android:textSize="16sp"
             app:backgroundTint="#EDE7F6" />
 
         <Button
             android:id="@+id/button6"
-            android:layout_width="wrap_content"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/button5"
             android:layout_alignParentRight="true"
@@ -99,13 +106,14 @@
             android:layout_marginEnd="80dp"
             android:layout_marginRight="80dp"
             android:background="@drawable/my_btn"
-            android:text="탐방예약"
+            android:text="#탐방예약"
             android:textColor="@color/black"
+            android:textSize="16sp"
             app:backgroundTint="#EDE7F6" />
 
         <Button
             android:id="@+id/button7"
-            android:layout_width="wrap_content"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/button6"
             android:layout_alignParentRight="true"
@@ -113,13 +121,14 @@
             android:layout_marginEnd="80dp"
             android:layout_marginRight="80dp"
             android:background="@drawable/my_btn"
-            android:text="미정"
+            android:text="#미정"
             android:textColor="@color/black"
+            android:textSize="16sp"
             app:backgroundTint="#EDE7F6" />
 
         <Button
             android:id="@+id/button8"
-            android:layout_width="wrap_content"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/button7"
             android:layout_alignParentRight="true"
@@ -127,8 +136,9 @@
             android:layout_marginEnd="80dp"
             android:layout_marginRight="80dp"
             android:background="@drawable/my_btn"
-            android:text="미정2"
+            android:text="#미정2"
             android:textColor="@color/black"
+            android:textSize="16sp"
             app:backgroundTint="#EDE7F6" />
 
     </RelativeLayout>
