--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -44,13 +44,14 @@
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="32dp">
 
         <fragment
             android:id="@+id/course"
+            android:name="org.maatanyy.janggon.hanra.SungFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:name="org.maatanyy.janggon.hanra.SungFragment" />
+            android:layout_height="match_parent" />
     </FrameLayout>
 
 </LinearLayout>
