--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
             android:layout_marginLeft="80dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/my_btn"
-            android:text="#코스"
+            android:text="#탐방정보"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:backgroundTint="#EDE7F6" />
