--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -5,18 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MapActivity">
+    tools:context=".HelpActivity">
 
-    <TextView
-        android:id="@+id/textView5"
+    <Button
+        android:id="@+id/buttoncall1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
-
-    <fragment
-        android:id="@+id/map"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        class="com.google.android.gms.maps.SupportMapFragment"/>
-
+        android:layout_gravity="center"
+        android:background="@drawable/my_btn"
+        android:text="SOS"
+        android:textColor="@color/black"
+        app:backgroundTint="#EDE7F6" />
 </LinearLayout>
