--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -7,6 +7,40 @@
     android:orientation="vertical"
     tools:context=".MapActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/buttonbig"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_weight="1"
+            android:background="@drawable/my_btn"
+            android:text="큰 지도"
+            android:textColor="@color/black"
+            app:backgroundTint="#EDE7F6" />
+
+        <Button
+            android:id="@+id/buttonsmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="25dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_weight="1"
+            android:background="@drawable/my_btn"
+            android:text="작은 지도"
+            android:textColor="@color/black"
+            app:backgroundTint="#EDE7F6" />
+    </LinearLayout>
+
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
